<Refactor>[Use events]: <description>
[
* Select All uses events
* Table fix to experimental add of Ogl/Pyut
* Keep V1 UI running
* Fix bug in Project Manager
* Two more component gets the Event Engine (I wonder if it should be a singleton
* Removed unused method in mediator
*
]

[
https://github.com/hasii2011/PyUt/issues/422
https://github.com/hasii2011/PyUt/issues/421
]

--- a/src/org/pyut/resources/loggingConfiguration.json
+++ b/src/org/pyut/resources/loggingConfiguration.json
@@ -38,7 +38,7 @@
     },
     "loggers": {
         "root": {
-            "level":     "ERROR",
+            "level":     "WARNING",
             "handlers":  ["rotatingFileHandler"],
             "propagate": "False"
         },
@@ -46,7 +46,7 @@
             "level":     "WARNING",
             "propagate": "False"
         },
-        "org.pyut.ui": {
+        "org.pyut": {
             "level":     "WARNING",
             "propagate": "False"
         },
@@ -67,14 +67,6 @@
         },
         "org.pyut.uiv2.PyutDocumentV2": {
             "level":     "WARNING",
-            "propagate": "False"
-        },
-        "ogl.OglAggregation": {
-            "level": "DEBUG",
-            "propagate": "False"
-        },
-        "ogl.OglAssociation": {
-            "level": "DEBUG",
             "propagate": "False"
         }
     }
