--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ python:
 
 before_install:
   - sudo apt install libgtk-3-dev
-  - sudo apt-get install python-wxgtk3.0
+  # - sudo apt-get install python-wxgtk3.0
   - sudo apt-get install -y  libsdl2-dev
 
 # command to install dependencies
