--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,9 @@ before_install:
 # command to install dependencies
 install:
   - python3 --version
+  - pip install pillow
+  - pip install numpy
+  - pip install six
   - pip install -r requirements.txt
 
 # command to run tests
