--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,18 @@ install:
   - pip install pillow
   - pip install numpy
   - pip install six
-  - pip install -r requirements.txt
+  - pip install orthogonal~=1.1.7
+  - pip install pyumldiagrams==2.30.8
+  - pip install pygmlparser==1.0.1
+  - pip install antlr4-python3-runtime==4.9.3
+  - pip install PyGithub==1.55
+  - pip install xmlschema==1.11.1
+  - pip install Deprecated==1.2.13
+  - pip install pyutmodel==1.1.0
+  - pip install ogl==0.60.2
+  - pip3 install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04/ wxPython
+
+  # - pip install -r requirements.txt
 
 # command to run tests
 script: ${TRAVIS_BUILD_DIR}/scripts/runtests.sh
