<CI>[]: <Make Pyut build on Linux 💚>
[WTH is attrdict]

[]

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ before_install:
 install:
   - python3 --version
   # - pip install mkdocs-material==8.4
+  - pip install attrdict
   - pip install six wheel setuptools
   - pip install orthogonal~=1.1.7
   - pip install pyumldiagrams==2.30.8
