--- a/.travis.yml
+++ b/.travis.yml
@@ -27,12 +27,11 @@ before_install:
 # command to install dependencies
 install:
   - python3 --version
-  - pip download --verbose wxPython-4.2.0-cp39-cp39-linux_x86_64.whl
-  - pip install mkdocs-material==8.4
-  - pip install attrdict
   - pip install setuptools==65.4.1
   - pip install wheel==0.37.1
   - pip install six==1.16.0
+  # - pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04/ wxPython
+  - pip install -U -f  https://extras.wxpython.org/wxPython4/extras/manylinux-test/wxPython-4.2.0-cp310-cp310-manylinux_2_28_x86_64.whl wxPython
   - pip install orthogonal~=1.1.7
   - pip install pyumldiagrams==2.30.8
   - pip install pygmlparser==1.0.1
@@ -40,7 +39,6 @@ install:
   # - pip install PyGithub==1.55
   - pip install xmlschema==1.11.1
   - pip install Deprecated==1.2.13
-  - pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04/ wxPython
   - pip install pyutmodel==1.1.0
   - pip install ogl==0.60.2
 
