--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,9 @@ install:
   - pip install setuptools==65.4.1
   - pip install wheel==0.37.1
   - pip install six==1.16.0
-  # - pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04/ wxPython
-  - pip install -U -f  https://extras.wxpython.org/wxPython4/extras/manylinux-test/wxPython-4.2.0-cp310-cp310-manylinux_2_28_x86_64.whl wxPython
+  - pip install attrdict3
+  - pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04/ wxPython
+  # - pip install -U -f  https://extras.wxpython.org/wxPython4/extras/manylinux-test/wxPython-4.2.0-cp310-cp310-manylinux_2_28_x86_64.whl wxPython
   - pip install orthogonal~=1.1.7
   - pip install pyumldiagrams==2.30.8
   - pip install pygmlparser==1.0.1
