<Update>[PyutUIV2]: <Make sure AnchorPoints work>
[
This is bad mooky here. The Ogl objects were created withing having a Diagram
The legacy code deserialized the object while adding them to a frame. This
new code deserializes w/o reference to a frame
If we don't this the AnchorPoints are not on the diagram and lines ends are not
movable.
]

[https://github.com/hasii2011/PyUt/issues/426]

--- a/src/org/pyut/resources/loggingConfiguration.json
+++ b/src/org/pyut/resources/loggingConfiguration.json
@@ -50,23 +50,9 @@
             "level":     "WARNING",
             "propagate": "False"
         },
-        "org.pyut.uiv2.PyutUIV2": {
+        "org.pyut.uiv2": {
             "level":     "WARNING",
             "handlers":  ["consoleHandler"],
-            "propagate": "False"
-        },
-        "org.pyut.uiv2.ProjectTree": {
-            "level":     "WARNING",
-            "handlers":  ["consoleHandler"],
-            "propagate": "False"
-        },
-        "org.pyut.uiv2.PyutProjectV2": {
-            "level":     "INFO",
-            "handlers":  ["consoleHandlerFunctionNames"],
-            "propagate": "False"
-        },
-        "org.pyut.uiv2.PyutDocumentV2": {
-            "level":     "WARNING",
             "propagate": "False"
         }
     }
