<Refactor>[Toolbox Handler]: <Get the heck out Mediator>
[
* Mediator is almost gone
* Need new Toolbox Handler (Maybe should not be singleton
* Event Engine continues its spread
* Project manager needed update to determine responsibilities
* Rearrange project manager by functionality
]

[https://github.com/hasii2011/PyUt/issues/421]

--- a/src/org/pyut/resources/loggingConfiguration.json
+++ b/src/org/pyut/resources/loggingConfiguration.json
@@ -54,6 +54,12 @@
             "level":     "WARNING",
             "handlers":  ["consoleHandler"],
             "propagate": "False"
+        },
+        "org.pyut.uiv2.ProjectManager": {
+            "level":     "WARNING",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
         }
+
     }
 }
