--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,7 @@
 wheel~=0.37.1
 setuptools==65.5.0
 
-orthogonal~=1.1.7
-pyumldiagrams==2.30.8
-pygmlparser==1.0.1
-
-antlr4-python3-runtime==4.9.3
 PyGithub==1.55
-xmlschema==1.11.1
 Deprecated==1.2.13
 
 pyut2xml==0.1.1
@@ -20,10 +14,11 @@ html-testRunner~=1.2.1
 mypy==0.982
 mypy-extensions==0.4.3
 types-Deprecated==1.2.9
-types-setuptools==65.4.0.0
+types-setuptools==65.5.0.1
 typing_extensions==4.4.0
 
 wxPython==4.2.0
 pyutmodel==1.1.0
 ogl==0.60.5
 oglio==0.5.7
+pyutplugincore==0.5.6
