--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ pyut2xml==0.1.1
 epr2md==0.1.2
 traviscli==0.3.2
 pkgversions==0.2.2
-py2app~=0.28.2
+py2app==0.28.4
 
 html-testRunner~=1.2.1
 mypy==0.982
