Get Ogl with no deprecated calls

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ types-setuptools==65.5.0.2
 typing_extensions==4.4.0
 
 wxPython==4.2.0
-pyutmodel==1.1.0
-ogl==0.60.5
-oglio==0.5.7
-pyutplugincore==0.5.10
+pyutmodel~=1.1.0
+ogl~=0.60.8
+oglio==0.5.9
+pyutplugincore==0.5.11
