<>[]: <Update to make tools work>
[]

[https://github.com/hasii2011/PyUt/issues/428]

--- a/src/org/pyut/resources/loggingConfiguration.json
+++ b/src/org/pyut/resources/loggingConfiguration.json
@@ -43,23 +43,12 @@
             "propagate": "False"
         },
         "Pyut": {
-            "level":     "WARNING",
+            "level":     "INFO",
             "propagate": "False"
         },
         "org.pyut": {
-            "level":     "WARNING",
-            "propagate": "False"
-        },
-        "org.pyut.uiv2": {
-            "level":     "WARNING",
-            "handlers":  ["consoleHandler"],
-            "propagate": "False"
-        },
-        "org.pyut.uiv2.ProjectManager": {
-            "level":     "WARNING",
-            "handlers":  ["consoleHandler"],
+            "level":     "INFO",
             "propagate": "False"
         }
-
     }
 }
