--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,4 @@
 
-os: osx
-
-osx_image: xcode13.4
-
 notifications:
   email:
     recipients:
@@ -10,38 +6,45 @@ notifications:
     on_success: change # default: change
     on_failure: always # default: always
 
-matrix:  # or you can replace `matrix` with `jobs`
-  include:
-    - name: "Python: 3.10"
-      os: osx
-      language: shell
-      python: 3.10.4
-      env: PYTHONVERSION=3.10.4
-      cache:
-        - directories:
-          - $HOME/Library/Caches/pip
+dist: jammy
 
 language: python
-
-cache: pip
 
 python:
   - "3.10"
 
+cache: pip
+
+services:
+  - xvfb
+
+
 before_install:
-  - brew list
-  - export PYTHON_CONFIGURE_OPTS="--enable-framework"
-  - eval "$(pyenv init -)"
-  - pyenv install $PYTHONVERSION
-  - pyenv local $PYTHONVERSION
-  # - brew upgrade python
-  - curl https://bootstrap.pypa.io/get-pip.py | python3
+  - sudo apt install libgtk-3-dev
+  # - sudo apt-get install python-wxgtk3.0
+  - sudo apt-get install -y  libsdl2-dev
 
 # command to install dependencies
 install:
   - python3 --version
-  - pyenv --version
-  - pip install -r requirements.txt
+  - pip install setuptools==65.4.1
+  - pip install wheel==0.37.1
+  - pip install six==1.16.0
+  - pip install attrdict3
+  - pip install wxPython
+  # - pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04/ wxPython
+  # - pip install -U -f  https://extras.wxpython.org/wxPython4/extras/manylinux-test/wxPython-4.2.0-cp310-cp310-manylinux_2_28_x86_64.whl wxPython
+  - pip install orthogonal~=1.1.7
+  - pip install pyumldiagrams==2.30.8
+  - pip install pygmlparser==1.0.1
+  - pip install antlr4-python3-runtime==4.9.3
+  # - pip install PyGithub==1.55
+  - pip install xmlschema==1.11.1
+  - pip install Deprecated==1.2.13
+  - pip install pyutmodel==1.1.0
+  - pip install ogl==0.60.2
+
+  # - pip install -r requirements.txt
 
 # command to run tests
 script: ${TRAVIS_BUILD_DIR}/scripts/runtests.sh
