<>[]: <Cheaper Linux build 🐧>
[Try III]

[]

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,12 @@ install:
   - pip install six
   - pip install attrdict3
   # - pip install wxPython
-  - pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04/wxPython-4.2.0-cp310-cp310-linux_x86_64.whl wxPython
+  # - pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04  wxPython
   # - pip install -U -f  https://extras.wxpython.org/wxPython4/extras/manylinux-test/wxPython-4.2.0-cp310-cp310-manylinux_2_28_x86_64.whl wxPython
+  - pip download wxPython
+  - pip wheel -v wxPython-4.2.0.tar.gz
+  - ls -al
+  - pip install wxPython-4.2.0-cp310-cp310-linux_aarch64.whl
   - pip install orthogonal~=1.1.7
   - pip install pyumldiagrams==2.30.8
   - pip install pygmlparser==1.0.1
