--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,10 +10,17 @@ jobs:
       - python/install-packages:
           pkg-manager: pip
       - python/install-packages:
-          pip-dependency-file: requirements.txt
+          args: wheel==0.38.4
+          pkg-manager: pip
+      - python/install-packages:
+          args: setuptools==65.5.1
           pkg-manager: pip
       - run:
           command: |
+            pip download wxpython
+            pip wheel -v wxPython-4.2.0.tar.gz
+            ls -al
+            pip install wxPython-4.2.0-cp310-cp310-linux_aarch64.whl
             scripts/runtests.sh
           name: Unit Tests
 workflows:
