--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,8 @@ jobs:
           command: |
             pip install wheel==0.38.4
             pip install setuptools==65.5.1
+            pip install six==1.16.0
+            pip install attrdict3
             pip download wxpython
             pip wheel -v wxPython-4.2.0.tar.gz
             ls -al
