--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,19 +3,27 @@ version: '2.1'
 orbs:
   python: circleci/python@1.1.0
 jobs:
+  machine:
+    image: ubuntu-2204:current
   build:
     executor: python/default
     steps:
       - checkout
       - run:
+          name: Install dependencies
           command: |
+            sudo apt update
+            sudo apt install libgtk-3-dev
+            sudo apt-get install -y  libsdl2-dev
             pip install wheel==0.38.4
             pip install setuptools==65.5.1
             pip install six==1.16.0
             pip install attrdict3
             pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04  wxPython
-            scripts/runtests.sh
-          name: Unit Tests
+      - run:
+            name: run tests
+            command: | 
+              scripts/runtests.sh
 workflows:
   main:
     jobs:
