--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,10 @@ jobs:
             pip install six==1.16.0
             pip install attrdict3
             pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04  wxPython
+            pip install pyutmodel~=1.1.0
+            pip install ogl~=0.60.8
+            pip install oglio==0.5.10
+            pip install pyutplugincore==0.5.14
       - run:
             name: run tests
             command: | 
