--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
             pip install ogl~=0.60.8
             pip install oglio==0.5.10
             pip install pyutplugincore==0.5.14
+            pip install html-testRunner~=1.2.1
       - run:
             name: run tests
             command: | 
