--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,9 +3,11 @@ version: '2.1'
 
 orbs:
   python: circleci/python@2.1.1
-  
+
 jobs:
   build:
+    docker:
+      - image: cimg/python:3.10
     executor: python/default
     steps:
       - checkout
