--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,7 @@ jobs:
       - run:
             name: run tests
             command: | 
+              export DISPLAY=localhost:0.0
               scripts/runtests.sh
 workflows:
   main:
