--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
             sudo apt install libnotify-dev
             sudo apt install libgtk-3-dev
             sudo apt-get install -y  libsdl2-dev
+            sudo apt install xvfb
             pip install --upgrade pip
             pip install wheel==0.38.4
             pip install setuptools==65.5.1
