--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,6 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            sudo apt update
             sudo apt install libnotify-dev
             sudo apt install libgtk-3-dev
             sudo apt-get install -y  libsdl2-dev
@@ -35,6 +34,7 @@ jobs:
             name: run tests
             command: | 
               export DISPLAY=localhost:0.0
+              echo $PATH
               xvfb
               scripts/runtests.sh
 workflows:
