--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
 version: '2.1'
 
 orbs:
-  python: circleci/python@2.1.1
+  python: circleci/python@2.1.1-python-browsers
 
 jobs:
   build:
@@ -18,7 +18,6 @@ jobs:
             sudo apt install libnotify-dev
             sudo apt install libgtk-3-dev
             sudo apt-get install -y  libsdl2-dev
-            sudo apt install xvfb
             pip install --upgrade pip
             pip install wheel==0.38.4
             pip install setuptools==65.5.1
@@ -31,10 +30,6 @@ jobs:
             pip install oglio==0.5.10
             pip install pyutplugincore==0.5.14
             pip install html-testRunner~=1.2.1
-      - run:
-          name: Running X virtual framebuffer
-          command: Xvfb :99 -screen 0 1280x1024x24
-          background: true
       - run:
             name: run tests
             command: | 
