--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,9 @@ services:
 
 
 before_install:
+  - sudo apt update
+  - sudo apt install libnotify-dev
   - sudo apt install libgtk-3-dev
-  # - sudo apt-get install python-wxgtk3.0
   - sudo apt-get install -y  libsdl2-dev
 
 # command to install dependencies
@@ -32,13 +33,7 @@ install:
   - pip install wheel==0.38.3
   - pip install six==1.16.0
   - pip install attrdict3
-  # - pip install wxPython
-  # - pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04  wxPython
-  # - pip install -U -f  https://extras.wxpython.org/wxPython4/extras/manylinux-test/wxPython-4.2.0-cp310-cp310-manylinux_2_28_x86_64.whl wxPython
-  - pip download wxPython
-  - travis_wait pip wheel -qqq wxPython-4.2.0.tar.gz
-  - ls -al
-  - pip install wxPython-4.2.0-cp310-cp310-linux_aarch64.whl
+  - pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04  wxPython
   - pip install orthogonal~=1.1.7
   - pip install pyumldiagrams==2.30.8
   - pip install pygmlparser==1.0.1
