--- a/developer/.travis-Jammy.yml
+++ b/developer/.travis-Jammy.yml
@@ -20,24 +20,25 @@ services:
 
 
 before_install:
+  - sudo apt update
+  - sudo apt install libnotify-dev
   - sudo apt install libgtk-3-dev
-  # - sudo apt-get install python-wxgtk3.0
   - sudo apt-get install -y  libsdl2-dev
 
 # command to install dependencies
 install:
   - python3 --version
-  - pip install setuptools==65.4.1
-  - pip install wheel==0.37.1
+  - uname -a
+  - pip install setuptools==65.5.1
+  - pip install wheel==0.38.3
   - pip install six==1.16.0
   - pip install attrdict3
-  - pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04/ wxPython
-  # - pip install -U -f  https://extras.wxpython.org/wxPython4/extras/manylinux-test/wxPython-4.2.0-cp310-cp310-manylinux_2_28_x86_64.whl wxPython
+  - pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04  wxPython
   - pip install orthogonal~=1.1.7
   - pip install pyumldiagrams==2.30.8
   - pip install pygmlparser==1.0.1
   - pip install antlr4-python3-runtime==4.9.3
-  # - pip install PyGithub==1.55
+  - pip install PyGithub==1.55
   - pip install xmlschema==1.11.1
   - pip install Deprecated==1.2.13
   - pip install pyutmodel==1.1.0
