--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,15 +16,18 @@ jobs:
     executor: python/default
     steps:
       - checkout
+      - python/install-packages:
+          args: wheel==0.38.4
+          pkg-manager: pip
+          pypi-cache: true
       - run:
-          name: Install dependencies
+          name: Install library dependencies
           command: |
             sudo apt update
             sudo apt install libnotify-dev
             sudo apt install libgtk-3-dev
             sudo apt-get install -y  libsdl2-dev
             pip install --upgrade pip
-            pip install wheel==0.38.4
             pip install setuptools==65.5.1
             pip install six==1.16.0
             pip install attrdict3
