--- a/requirements.txt
+++ b/requirements.txt
@@ -14,11 +14,11 @@ html-testRunner~=1.2.1
 mypy==0.990
 mypy-extensions==0.4.3
 types-Deprecated==1.2.9
-types-setuptools==65.5.0.2
+types-setuptools==65.5.0.3
 typing_extensions==4.4.0
 
 wxPython==4.2.0
-pyutmodel~=1.1.0
-ogl~=0.60.8
-oglio==0.5.10
-pyutplugincore==0.5.14
+pyutmodel~=1.2.0
+ogl==0.60.10
+oglio==0.5.16
+pyutplugincore==0.6.1
