--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 wheel==0.38.4
-setuptools==65.5.1
+setuptools==65.6.0
 
 PyGithub==1.55
 Deprecated==1.2.13
@@ -11,14 +11,14 @@ pkgversions==0.2.2
 py2app==0.28.4
 
 html-testRunner~=1.2.1
-mypy==0.990
+mypy==0.991
 mypy-extensions==0.4.3
 types-Deprecated==1.2.9
-types-setuptools==65.5.0.3
+types-setuptools==65.6.0
 typing_extensions==4.4.0
 
 wxPython==4.2.0
 pyutmodel~=1.2.0
-ogl==0.60.10
-oglio==0.5.16
-pyutplugincore==0.6.1
+ogl==0.60.15
+oglio==0.5.20
+pyutplugincore~=0.6.3
