<>[]: <Remove homegrown code>
[Make sure we work with no recently opened code]

[https://github.com/hasii2011/PyUt/issues/433]

--- a/src/pyut/resources/loggingConfiguration.json
+++ b/src/pyut/resources/loggingConfiguration.json
@@ -46,7 +46,7 @@
             "level":     "INFO",
             "propagate": "False"
         },
-        "org.pyut": {
+        "pyut": {
             "level":     "INFO",
             "propagate": "False"
         }
