<Obsolete>[History Manager]: <Implement Delete Actor Command>
[Put TODO's in to simplify creation submission]

[https://github.com/hasii2011/PyUt/issues/435]

--- a/src/pyut/resources/loggingConfiguration.json
+++ b/src/pyut/resources/loggingConfiguration.json
@@ -38,8 +38,8 @@
     },
     "loggers": {
         "root": {
-            "level":     "WARNING",
-            "handlers":  ["rotatingFileHandler"],
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
         "Pyut": {
