<Enhancements>[Preferences Dialog]: <Use OS X version>
[Check in on branch to save for later]

[https://github.com/hasii2011/PyUt/issues/442]

--- a/src/pyut/resources/loggingConfiguration.json
+++ b/src/pyut/resources/loggingConfiguration.json
@@ -38,7 +38,7 @@
     },
     "loggers": {
         "root": {
-            "level":     "INFO",
+            "level":     "WARNING",
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
