--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,10 +30,10 @@ jobs:
             pip install attrdict3
             pip install -v -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04  wxPython
             pip install PyGithub==1.55
-            pip install pyutmodel~=1.1.0
-            pip install ogl~=0.60.15
-            pip install oglio==0.5.20
-            pip install pyutplugincore==0.6.3
+            pip install pyutmodel~=1.3.3
+            pip install ogl~=0.60.25
+            pip install oglio==0.5.40
+            pip install pyutplugins==0.6.6
             pip install html-testRunner~=1.2.1
       - run:
             name: run tests
