--- a/requirements.txt
+++ b/requirements.txt
@@ -14,11 +14,11 @@ html-testRunner~=1.2.1
 mypy==0.991
 mypy-extensions==0.4.3
 types-Deprecated==1.2.9
-types-setuptools==65.6.0.1
+types-setuptools==65.6.0.2
 typing_extensions==4.4.0
 
 wxPython==4.2.0
-pyutmodel~=1.2.0
-ogl==0.60.15
-oglio==0.5.20
-pyutplugincore~=0.6.3
+pyutmodel==1.3.3
+ogl==0.60.25
+oglio==0.5.40
+pyutplugins~=0.6.6
