--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,16 +27,16 @@ jobs:
             sudo apt install libgtk-3-dev
             sudo apt-get install -y  libsdl2-dev
             pip install --upgrade pip
-            pip install wheel==0.38.4
-            pip install setuptools==65.5.1
+            pip install wheel
+            pip install setuptools
             pip install six==1.16.0
             pip install attrdict3
             pip install -v -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04  wxPython
-            pip install PyGithub==1.55
-            pip install pyutmodel~=1.3.3
-            pip install ogl~=0.60.25
-            pip install oglio==0.5.40
-            pip install pyutplugins==0.6.6
+            pip install PyGithub
+            pip install pyutmodel~=1.3.4
+            pip install ogl~=0.60.30
+            pip install oglio~=0.5.50
+            pip install pyutplugins~=0.6.7
             pip install html-testRunner~=1.2.1
       - run:
             name: run tests
