--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 wheel==0.38.4
-setuptools==65.6.3
+setuptools==66.1.1
 
-PyGithub==1.55
+PyGithub==1.57
 Deprecated==1.2.13
 
 pyut2xml==0.1.1
@@ -14,11 +14,11 @@ html-testRunner~=1.2.1
 mypy==0.991
 mypy-extensions==0.4.3
 types-Deprecated==1.2.9
-types-setuptools==65.6.0.3
+types-setuptools==65.7.0.3
 typing_extensions==4.4.0
 
 wxPython==4.2.0
-pyutmodel==1.3.3
-ogl==0.60.25
-oglio==0.5.40
-pyutplugins~=0.6.6
+pyutmodel~=1.3.4
+ogl~=0.60.30
+oglio~=0.5.50
+pyutplugins~=0.6.7
