--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 wheel==0.38.4
-setuptools==66.1.1
+setuptools==67.0.0
 
 PyGithub==1.57
 Deprecated==1.2.13
@@ -19,6 +19,6 @@ typing_extensions==4.4.0
 
 wxPython==4.2.0
 pyutmodel~=1.3.4
-ogl~=0.60.30
-oglio~=0.5.50
-pyutplugins~=0.6.9
+ogl==0.60.41
+oglio==0.5.51
+pyutplugins~=0.8.0
