--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 wheel==0.38.4
-setuptools==67.0.0
+setuptools==67.1.0
 
 PyGithub==1.57
 Deprecated==1.2.13
@@ -12,13 +12,13 @@ py2app==0.28.4
 
 html-testRunner~=1.2.1
 mypy==0.991
-mypy-extensions==0.4.3
+mypy-extensions==1.0.0
 types-Deprecated==1.2.9
-types-setuptools==65.7.0.3
+types-setuptools==67.1.0.0
 typing_extensions==4.4.0
 
 wxPython==4.2.0
 pyutmodel~=1.3.4
 ogl==0.60.41
 oglio==0.5.51
-pyutplugins~=0.8.0
+pyutplugins==0.8.18
