--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 wheel==0.38.4
-setuptools==67.1.0
+setuptools==67.2.0
 
 PyGithub==1.57
 Deprecated==1.2.13
@@ -11,14 +11,15 @@ pkgversions==0.2.2
 py2app==0.28.4
 
 html-testRunner~=1.2.1
-mypy==0.991
+# mypy==0.991
+mypy==1.0.0
 mypy-extensions==1.0.0
 types-Deprecated==1.2.9
-types-setuptools==67.1.0.0
+types-setuptools==67.2.0.1
 typing_extensions==4.4.0
 
 wxPython==4.2.0
-pyutmodel~=1.3.4
-ogl==0.60.41
-oglio==0.5.51
-pyutplugins==0.8.18
+pyutmodel==1.4.0
+ogl==0.70.0
+oglio==0.5.62
+pyutplugins==0.8.21
