<Usability>[ProjectManager]: <Nice usability fix>
[
* Update Error manager for better logs
* Report error from ProjectManager
* Handle cleanup in PyutUIV2
]

[https://github.com/hasii2011/PyUt/issues/474]

--- a/src/pyut/resources/loggingConfiguration.json
+++ b/src/pyut/resources/loggingConfiguration.json
@@ -39,7 +39,7 @@
     "loggers": {
         "root": {
             "level":     "WARNING",
-            "handlers":  ["consoleHandler"],
+            "handlers":  ["rotatingFileHandler"],
             "propagate": "False"
         },
         "Pyut": {
