<Dependency Update>[]: <API Update>
[]

[https://github.com/hasii2011/PyUt/issues/490]

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-wheel==0.38.4
-setuptools==67.4.0
+wheel==0.40.0
+setuptools==67.6.1
 
 PyGithub==1.58.0
 Deprecated==1.2.13
@@ -11,15 +11,16 @@ pkgversions==0.2.2
 py2app==0.28.5
 
 html-testRunner~=1.2.1
-mypy==1.0.1
+mypy==1.1.1
 mypy-extensions==1.0.0
-types-Deprecated==1.2.9.1
-types-setuptools==67.4.0.1
+types-Deprecated==1.2.9.2
+types-setuptools==67.6.0.6
 typing_extensions==4.5.0
 
 wxPython==4.2.0
-pyutmodel==1.4.0
-hasiicommon~=0.0.7
-ogl==0.70.20
-oglio==0.5.80
-pyutplugins==0.8.40
+hasiihelper~=0.1.0
+pyutmodel==1.4.2
+hasiicommon==0.2.1
+ogl==0.70.22
+oglio==0.6.0
+pyutplugins==0.8.42
