--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,14 +30,15 @@ jobs:
             pip install wheel
             pip install setuptools
             pip install six==1.16.0
-            pip install attrdict3
+            pip install attrdict3~=2.0.2
             pip install -v -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04  wxPython
             pip install PyGithub
-            pip install pyutmodel==1.4.0
-            pip install hasiicommon==0.0.7
-            pip install ogl==0.70.20
-            pip install oglio==0.5.80
-            pip install pyutplugins==0.8.40
+            pip install hasiihelper~=0.1.0
+            pip install pyutmodel==1.4.2
+            pip install hasiicommon==0.2.1
+            pip install ogl==0.70.22
+            pip install oglio==0.6.0
+            pip install pyutplugins==0.8.42
             pip install html-testRunner==1.2.1
       - run:
             name: run tests
