<Update>[]: <Get XML Line fee fix>
[Prepare for using buildlackey]

[https://github.com/hasii2011/PyUt/issues/493]

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 wheel==0.40.0
 setuptools==67.6.1
 
-PyGithub==1.58.0
+PyGithub==1.58.1
 Deprecated==1.2.13
 
 pyut2xml==0.1.1
@@ -11,16 +11,16 @@ pkgversions==0.2.2
 py2app==0.28.5
 
 html-testRunner~=1.2.1
-mypy==1.1.1
+mypy==1.2.0
 mypy-extensions==1.0.0
 types-Deprecated==1.2.9.2
-types-setuptools==67.6.0.6
+types-setuptools==67.6.0.8
 typing_extensions==4.5.0
 
 wxPython==4.2.0
-hasiihelper~=0.1.0
-pyutmodel==1.4.2
-hasiicommon==0.2.1
-ogl==0.70.22
-oglio==0.6.0
-pyutplugins==0.8.42
+hasiihelper==0.2.0
+pyutmodel==1.4.3
+hasiicommon==0.2.2
+ogl==0.70.26
+oglio==0.7.1
+pyutplugins==0.8.50
