--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,13 +33,14 @@ jobs:
             pip install attrdict3~=2.0.2
             pip install -v -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04  wxPython
             pip install PyGithub
-            pip install hasiihelper~=0.1.0
-            pip install pyutmodel==1.4.2
-            pip install hasiicommon==0.2.1
-            pip install ogl==0.70.22
-            pip install oglio==0.6.0
-            pip install pyutplugins==0.8.42
+            pip install hasiihelper~=0.2.0
+            pip install pyutmodel==1.4.3
+            pip install hasiicommon==0.2.2
+            pip install ogl==0.70.26
+            pip install oglio==0.7.1
+            pip install pyutplugins==0.8.50
             pip install html-testRunner==1.2.1
+            pip install buildlackey~=0.7.0
       - run:
             name: run tests
             command: | 
