<>[]: <Partial build lackey support>
[]

[https://github.com/hasii2011/pyut/issues/494]

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,4 +44,4 @@ jobs:
       - run:
             name: run tests
             command: | 
-              scripts/runtests.sh
+              runtests
