--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 wheel==0.41.1
 setuptools==68.0.0
 
+# the following necessary when building the
+# application with py2App
+chardet==5.2.0
 PyGithub==1.59.1
 Deprecated==1.2.14
 
 pyut2xml==0.1.1
 epr2md==0.1.2
 pkgversions==0.2.2
-py2app==0.28.5
+# py2app==0.28.5
+py2app==0.28.6
 buildlackey==1.1.0
 versionoverlord==0.6.0
 
