<Format Update>[Plugins/Dependencies]: <Lots of updates>
[
* Packages renamed
* Catch one more type of error
*
]

[
https://github.com/hasii2011/pyut/issues/515
https://github.com/hasii2011/pyut/issues/514
]

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,8 @@ __pycache__/
 /html/
 build/
 dist/
-pyut.egg-info
-/pyenv-3.10.10/
-/pyenv-3.11.0/
+Pyut.egg-info
+/pyenv-3.11.5/
 /site/
 /docs/
 /pyut.log
