--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,14 +33,14 @@ jobs:
             pip install attrdict3~=2.0.2
             pip install -v -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04  wxPython
             pip install PyGithub~=1.59.1
-            pip install hasiihelper~=0.2.0
-            pip install pyutmodel==1.4.4
-            pip install hasiicommon==0.3.1
-            pip install ogl==0.85.0
-            pip install oglio==1.0.0
-            pip install pyutplugins==1.0.0
+            pip install codeallybasic~=0.5.2
+            pip install codeallyadvanced==0.5.2
+            pip install pyutmodel==1.5.0
+            pip install ogl==0.90.3
+            pip install oglio==1.2.0
+            pip install pyutplugins==1.1.5
             pip install html-testRunner==1.2.1
-            pip install buildlackey~=1.1.0
+            pip install buildlackey~=1.3.3
       - run:
             name: run tests
             command: | 
