--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-wheel==0.41.1
-setuptools==68.0.0
+wheel==0.41.2
+setuptools==68.2.2
 
 # the following necessary when building the
 # application with py2App
@@ -7,25 +7,23 @@ chardet==5.2.0
 PyGithub==1.59.1
 Deprecated==1.2.14
 
-pyut2xml==0.1.1
-epr2md==0.1.2
-pkgversions==0.2.2
-# py2app==0.28.5
+# pyut2xml==0.1.1
+# epr2md==0.1.2
 py2app==0.28.6
-buildlackey==1.1.0
-versionoverlord==0.6.0
+buildlackey==1.3.3
+versionoverlord==0.6.2
 
 html-testRunner~=1.2.1
-mypy==1.4.1
+mypy==1.5.1
 mypy-extensions==1.0.0
 types-Deprecated==1.2.9.3
-types-setuptools==68.0.0.3
-typing_extensions==4.7.1
+types-setuptools==68.2.0.0
+typing_extensions==4.8.0
 
 wxPython==4.2.1
-hasiihelper==0.2.1
-pyutmodel==1.4.4
-hasiicommon==0.3.1
-ogl==0.85.0
-oglio==1.0.0
-pyutplugins==1.0.0
+codeallybasic==0.5.2
+codeallyadvanced==0.5.2
+pyutmodel==1.5.0
+ogl==0.90.3
+oglio==1.2.0
+pyutplugins==1.1.5
