--- a/.mypi.ini
+++ b/.mypi.ini
@@ -1,7 +1,10 @@
 
 [mypy]
-python_version = 3.10
+python_version = 3.11
 pretty = True
+implicit_optional = True
+warn_unused_ignores = True
+strict_equality = True
 
 [mypy-wx.*]
 ignore_missing_imports = True
