--- a/pyut/resources/loggingConfiguration.json
+++ b/pyut/resources/loggingConfiguration.json
@@ -49,6 +49,12 @@
         "pyut": {
             "level":     "INFO",
             "propagate": "False"
+        },
+        "miniogl.DiagramFrame": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
         }
+
     }
 }
