--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,10 +38,10 @@ jobs:
             pip install pyutmodel==1.5.1
             pip install ogl==1.0.0
             pip install oglio==1.2.2
-            pip install pyutplugins==1.2.2
+            pip install pyutplugins==1.3.0
             pip install html-testRunner==1.2.1
-            pip install buildlackey~=1.6.0
+            pip install buildlackey~=1.6.1
       - run:
             name: run tests
             command: | 
-              unittests -s .
+              unittests
