--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ typing_extensions==4.9.0
 wxPython==4.2.1
 codeallybasic==0.5.2
 codeallyadvanced==0.5.2
-pyutmodel==1.5.1
-ogl==1.0.0
-oglio==1.2.2
-pyutplugins==1.3.0
+pyutmodelv2==2.0.0a7
+ogl==2.0.0a7
+oglio==2.0.0a7
+pyutplugins==2.0.0a9
