--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ typing_extensions==4.9.0
 wxPython==4.2.1
 codeallybasic==0.5.2
 codeallyadvanced==0.5.2
-pyutmodelv2==2.0.0a7
-ogl==2.0.0a7
-oglio==2.0.0a7
-pyutplugins==2.0.0a11
+pyutmodelv2==2.0.0
+ogl==2.0.0
+oglio==2.0.0
+pyutplugins==2.0.0
