<Enhancement>[]: <Add UML Diagram pop up menu>
[Added rearrange links]

[https://github.com/hasii2011/pyut/issues/533]

--- a/pyut/resources/loggingConfiguration.json
+++ b/pyut/resources/loggingConfiguration.json
@@ -42,6 +42,12 @@
             "handlers":  ["rotatingFileHandler"],
             "propagate": "False"
         },
+        "pyutplugins": {
+            "level":     "INFO",
+            "handlers":  ["rotatingFileHandler"],
+            "propagate": "False"
+        },
+
         "Pyut": {
             "level":     "INFO",
             "propagate": "False"
