<Bug>[plugins]: <Get updated orthogonal adapter>
[]

[https://github.com/hasii2011/pyut/issues/551]

--- a/pyut/resources/loggingConfiguration.json
+++ b/pyut/resources/loggingConfiguration.json
@@ -39,12 +39,12 @@
     "loggers": {
         "root": {
             "level":     "WARNING",
-            "handlers":  ["rotatingFileHandler"],
+            "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
         "pyutplugins": {
             "level":     "INFO",
-            "handlers":  ["rotatingFileHandler"],
+            "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
 
