--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 wheel==0.43.0
-# Don't upgrade past this versio as 70.x.x does not work
+# Don't upgrade past this version as 70.x.x does not work
 setuptools==69.1.1
 
 # the following necessary when building the
@@ -13,7 +13,7 @@ buildlackey==1.6.3
 versionoverlord==1.4.0
 
 html-testRunner~=1.2.1
-mypy==1.9.0
+mypy==1.10.0
 mypy-extensions==1.0.0
 types-Deprecated==1.2.9.20240311
 types-setuptools==69.1.0.20240310
@@ -23,7 +23,7 @@ wxPython==4.2.1
 codeallybasic==1.3.1
 codeallyadvanced==1.3.1
 pyutmodelv2==2.1.6
-ogl==2.1.32
-oglio==2.1.7
-pyutplugins==2.4.1
+ogl==2.1.33
+oglio==2.2.0
+pyutplugins==2.4.2
 
