<Refactor>[]: <Use supported Semantic Version>
[Don't use code-ally-basic version]

[https://github.com/hasii2011/pyut/issues/557]

--- a/.mypi.ini
+++ b/.mypi.ini
@@ -23,3 +23,6 @@ ignore_missing_imports = True
 
 [mypy-HtmlTestRunner.*]
 ignore_missing_imports = True
+
+[mypy-semantic_version.*]
+ignore_missing_imports = True
