--- a/requirements.txt
+++ b/requirements.txt
@@ -20,9 +20,11 @@ types-setuptools==70.1.0.20240627
 typing_extensions==4.12.2
 
 wxPython==4.2.1
+semantic-version==2.10.0
+
 codeallybasic==1.3.2
 codeallyadvanced==1.3.1
 pyutmodelv2==2.1.6
 ogl==3.0.0
 oglio==2.3.0
-pyutplugins==2.5.0
+pyutplugins==2.6.0
