--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,30 @@
-wheel==0.43.0
+wheel==0.44.0
 # Don't upgrade past this version as 70.x.x does not work
 setuptools==70.1.1
 
 # the following necessary when building the
 # application with py2App
 chardet==5.2.0
-PyGithub==2.3.0
+PyGithub==2.2.0
 Deprecated==1.2.14
 
 py2app==0.28.8
-buildlackey==1.6.3
+buildlackey==1.7.0
 versionoverlord==1.4.0
 
 html-testRunner~=1.2.1
-mypy==1.10.1
+mypy==1.13.0
 mypy-extensions==1.0.0
 types-Deprecated==1.2.9.20240311
-types-setuptools==70.1.0.20240627
-typing_extensions==4.12.2
+# types-setuptools==70.1.0.20240627
+# typing_extensions==4.12.2
 
-wxPython==4.2.1
+wxPython==4.2.2
 semantic-version==2.10.0
 
-codeallybasic==1.3.2
-codeallyadvanced==1.3.1
-pyutmodelv2==2.1.6
-ogl==3.0.0
-oglio==2.3.0
-pyutplugins==2.6.0
+codeallybasic==1.7.0
+codeallyadvanced==1.3.2
+pyutmodelv2==2.2.0
+ogl==3.1.0
+oglio==2.3.1
+pyutplugins==3.0.0
