<Debug>[Event Engine]: <Add debug capability to Event Engine>
[
* Took the time to create additional packages for the event engine
* I am now capturing all the Listeners
* I have to build out the rest of the IdTypeMap;  This lets me know
which PyEventBinder corresponds to which enumeration
]

[https://github.com/hasii2011/pyut/issues/566]

--- a/pyut/resources/loggingConfiguration.json
+++ b/pyut/resources/loggingConfiguration.json
@@ -46,6 +46,11 @@
             "level":     "INFO",
             "propagate": "False",
             "handlers":  ["rotatingFileHandler"]
+        },
+        "pyut.ui.eventengine.EventEngine": {
+            "level":     "DEBUG",
+            "propagate": "False",
+            "handlers":  ["consoleHandler"]
         }
     }
 }
