--- a/pyut/resources/loggingConfiguration.json
+++ b/pyut/resources/loggingConfiguration.json
@@ -12,6 +12,10 @@
          "functionNames": {
             "format": "%(asctime)s.%(msecs)03d %(levelname)s %(module)s.%(funcName)s() %(message)s",
             "datefmt" : "%H:%M:%S"
+        },
+        "bestFormat": {
+            "format": "%(asctime)s.%(msecs)03d %(levelname)-6s %(name)-15s %(message)s",
+            "datefmt": "%Y-%m-%d %H:%M:%S"
         }
     },
     "handlers": {
@@ -28,7 +32,7 @@
 
         "rotatingFileHandler": {
             "class": "logging.handlers.RotatingFileHandler",
-            "formatter": "pyutSimple",
+            "formatter": "bestFormat",
             "filename": "/tmp/pyut.log",
             "mode": "a",
             "maxBytes": 81920,
