<Developer>[Logging]: <Better Logging I>
[
* We must be informative
* First of the squashed coming
]

[https://github.com/hasii2011/pyut/issues/568]

--- a/pyut/resources/loggingConfiguration.json
+++ b/pyut/resources/loggingConfiguration.json
@@ -14,7 +14,7 @@
             "datefmt" : "%H:%M:%S"
         },
         "bestFormat": {
-            "format": "%(asctime)s.%(msecs)03d %(levelname)-6s %(name)-15s %(message)s",
+            "format": "%(asctime)s.%(msecs)03d %(levelname)-6s %(name)-15s - %(message)s",
             "datefmt": "%Y-%m-%d %H:%M:%S"
         }
     },
