<Enhancement>[Logging]: <1st Cut of logging Control>
[
* Make it a feature
* Change the menu item and the ID name
* Coincidentally, fix a bug in my JSON logging configuration files, I will to fix this in all of my projects
]

[https://github.com/hasii2011/pyut/issues/565]

--- a/pyut/resources/loggingConfiguration.json
+++ b/pyut/resources/loggingConfiguration.json
@@ -1,6 +1,6 @@
 {
     "version": 1,
-    "disable_existing_loggers": "False",
+    "disable_existing_loggers": false,
     "formatters": {
         "simple": {
             "format": "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
@@ -43,12 +43,12 @@
     "loggers": {
         "Pyut": {
             "level":     "INFO",
-            "propagate": "False",
+            "propagate": false,
             "handlers":  ["rotatingFileHandler"]
         },
         "pyut": {
             "level":     "INFO",
-            "propagate": "False",
+            "propagate": false,
             "handlers":  ["rotatingFileHandler"]
         }
     }
